Correct render on mobile

--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 :root {
     touch-action: pan-x pan-y;
-    height: 100% 
+    /* height: 100%  */
 }
 
 .test{
